# golf

./: .env  .gitignore  LICENSE  docker-compose.yml
app/: build.gradle.kts  gradle.properties  settings.gradle.kts
app/androidApp/: build.gradle.kts
app/androidApp/src/main/: AndroidManifest.xml
app/androidApp/src/main/java/se/lucasboberg/golf/android/: MainActivity.kt  MyApplicationTheme.kt  Navigation.kt  Screen.kt
app/gradle/wrapper/: gradle-wrapper.properties
app/shared/: build.gradle.kts
app/shared/src/androidMain/kotlin/se/lucasboberg/golf/: Platform.android.kt
app/shared/src/androidMain/kotlin/se/lucasboberg/golf/utils/: Settings.kt
app/shared/src/commonMain/kotlin/se/lucasboberg/golf/: ApiClient.kt  Greeting.kt  Platform.kt
app/shared/src/commonMain/kotlin/se/lucasboberg/golf/data/: Auth.kt  User.kt
app/shared/src/commonMain/kotlin/se/lucasboberg/golf/utils/: Settings.kt
app/shared/src/iosMain/kotlin/se/lucasboberg/golf/: Platform.ios.kt
app/shared/src/iosMain/kotlin/se/lucasboberg/golf/utils/: Settings.kt
backend/: .dockerignore  .editorconfig  .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/2023-05-30-130749_create_tables/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: course.rs  hole.rs  mod.rs  round.rs  user.rs
backend/src/middlewares/: auth.rs
backend/src/models/: config.rs  course.rs  hole.rs  mod.rs  round.rs  user.rs
backend/src/repository/: database.rs  schema.rs
src/api/: course.rs  mod.rs  round.rs
src/models/: mod.rs
src/repository/: database.rs
(+14 files in other folders)
