[package]
name = "golf"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Boberg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.25", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
serde_json = "1.0.96"
diesel_migrations = "2.1.0"
